Fixed sidebar from stretching too far, fixed to 50% so won't overstretch

--- a/css/profile.css
+++ b/css/profile.css
@@ -65,6 +65,7 @@ main {
 .album-image-links {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
@@ -87,9 +88,9 @@ main {
 }
 
 .album-image-links img {
-    /* width: 231.6px;
-    height: 308.8px; */
-    width: 50%;
+    width: 231.6px;
+    height: 308.8px;
+    /* width: 50%; */
     border-radius: 5%;
 }
 
@@ -98,6 +99,7 @@ main {
 .side {
     display: flex;
     flex-direction: column;
+    width: 50%;
 }
 
 .sidebar {
